reverted decapitalisation <Aotearoa New Zealand#111732>

--- a/wiki/Aotearoa_New_Zealand.wikitext
+++ b/wiki/Aotearoa_New_Zealand.wikitext
@@ -1,1 +1,19 @@
-#redirect [[aotearoa New Zealand]]
+==English==
+===Proper noun===
+'''Aotearoa New Zealand'''
+
+===Alternative spellings===
+'''Aotearoa-New Zealand'''
+
+#(''New Zealand'') A [[bicultural]] name for [[New Zealand]].
+
+====Quotations====
+"The Commission recognises the importance of M&#257;ori culture... to all people of Aotearoa New Zealand" (Human Rights Commission Focus, March 1988).
+
+====References====
+*''The Dictionary of New Zealand English: A Dictionary of New Zealandisms on Historical Principles'', H.W. Orsman (editor), Oxford University Press (Auckland), 1997
+
+===See also===
+*[[Aotearoa]]
+*[[Maori]]
+*[[New Zealand]]
