--- a/wiki/Tonga.wikitext
+++ b/wiki/Tonga.wikitext
@@ -1,34 +1,1 @@
-==English==
-
-===Proper noun===
-
-# Country in Oceania. Official name: Kingdom of Tonga.
-
-====Translations====
-*[[Bosnian]]: Tonga ''f''
-*[[Breton]]: [[Tonga]]
-*Bulgarian: [[Тонга]]
-*[[Chinese]]: [[汤加]]
-*[[Danish]]: Tonga
-*[[Dutch]]: Tonga
-*[[Esperanto]]: [[Tongo]]
-*[[Finnish]]: Tonga
-*[[French]]: Tonga
-*[[German]]: Tonga
-*[[Greek]]: [[Τόνγκα]], [[Τόγκα]]
-*[[Interlingua]]: Tonga
-*[[Italian]]: Tonga
-*[[Japanese]]: [[トンガ]] (tonga)
-*[[Polish]]: Tonga
-*[[Portuguese]]: Tonga
-*[[Romanian]]: [[Tonga]] ''f''
-*[[Russian]]: [[Тонга]]
-*[[Spanish]]: Tonga
-*[[Swedish]]: Tonga
-
-===See===
-[[Countries of the world]]
-
-[[hu:Tonga]]
-[[fi:Tonga]]
-[[tr:Tonga]]
+#redirect [[Tonga]]
