split from pa <Pa#145495>

--- a/wiki/PA.wikitext
+++ b/wiki/PA.wikitext
@@ -1,1 +1,7 @@
-#redirect [[pa]]
+==Translingual==
+'''Pa'''
+
+#{{chemistry}} The symbol for [[protactinium]].
+#(''metrology'') The symbol for [[pascal]].
+[[Category:Symbols]]
+----
