--- a/wiki/AC.wikitext
+++ b/wiki/AC.wikitext
@@ -1,10 +1,8 @@
-==Middle English==
-===Conjunction===
-'''ac'''
-#but, although (obsolete, used only in [[Middle English]]; usage may be found in William Langland's ''Piers Plowman'') 
-
-== See also ==
-*[[Ac]]
+==Translingual==
+===Symbol===
+'''Ac'''
+#{{chemistry}} symbol for [[actinium]]
+[[Category:Symbols]]
 
 [[fr:Ac]]
 [[la:Ac]]
