split; see also <John#135785>

--- a/wiki/john.wikitext
+++ b/wiki/john.wikitext
@@ -1,1 +1,87 @@
-#redirect [[john]]
+==English==
+===Etymology===
+Latin ''johannes'', New Testament Greek ''Ioanes'', contraction from Hebrew ''Johanas'' ''God is gracious''; of great importance to early Christianity (John the Baptist, John the Apostle and John the Evangelist)
+===Proper noun===
+'''John'''
+
+#A male [[given name]] meaning "God's gracious gift".
+#(''colloquial'') A name used to address a man whose actual name is not known.
+
+====Alternative forms====
+*[[Jon]]
+
+====Female equivalents====
+*[[Jean]], [[Joan]], [[Joanna]], [[Joanne]]<!--please confirm these-->
+
+====Diminutives====
+*[[Johnnie]], [[Johnny]], [[Jack]], [[Hank]]
+
+====Synonyms====
+*(''name used to address a man whose actual name is not known''):
+**(''standard''): [[sir]]
+**(''colloquial or slang''): [[boy]] (''especially to a younger man''), [[bro]] (''US''), [[gov]] ''or'' [[guv]] (''British''), [[guvnor]] (''British''), [[man]] (''especially US''), [[mate]] (''British''), [[mister]], [[son]] (''to a younger man'')
+
+====Related English names====
+*[[Euan]]
+*[[Evan]]
+*[[Ewan]]
+*[[Ian]] (''Scottish'')
+*[[Ivan]]
+*[[Sean]] (''Irish'')
+*[[Shane]]
+*[[Shaun]]
+
+====Derived terms====
+*[[John Bull]]
+*[[John Dory]]
+*[[John Doe]]
+*[[John Thomas]]
+*[[Johnny Reb]]
+
+====Translations====
+
+'''male given name'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*Dutch: [[Jan]]
+*Finnish: [[Johan]]
+*French: [[Jean#French|Jean]]
+*German: [[Johannes]], [[Johannes]], [[Hans]]
+*Irish: [[Eoin]], [[Sean]]
+*Italian: [[Giovanni]], [[Gianni]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+*Japanese: [[ジョン]]('Jon'),[[ヨハン]]('Yohan',used in Japanese Christian Bibles)
+*Latin: [[Ioannes]]
+*Portguese: [[João]]
+*Romanian: [[Ioan]], [[Ion]]
+*Russian:[[Ivan]]
+*Vietnamese: [[Giôn]]
+*Spanish: [[Juan]],[[Ibañez]](Family name, child of John)
+*Scottish Gaelic: [[Iain]], [[Ian]], [[Eoin]], [[Seathan]]
+*Welsh: [[Ioan]], [[Ieuan]], [[Sion]]
+|}
+|}
+
+'''name used to address a man whose name is not known'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+===See also===
+*[[john]]
