--- a/wiki/PA.wikitext
+++ b/wiki/PA.wikitext
@@ -2,6 +2,6 @@
 '''Pa'''
 
 #{{chemistry}} The symbol for [[protactinium]].
-#(''metrology'') The symbol for [[pascal]].
+#(''metrology'') The symbol for [[pascal]], a [[unit]] of [[pressure]] and of [[stress]].
 [[Category:Symbols]]
 ----
