--- a/wiki/frank.wikitext
+++ b/wiki/frank.wikitext
@@ -1,1 +1,12 @@
-#redirect [[frank]]
+==English==
+===Adjective===
+'''frank''' (''[[comparative]]'' '''franker''', ''[[superlative]]'' '''frankest''')
+
+#[[Honest]], especially in an manner that seems slightly [[blunt]].
+#:''May I be frank with you?''
+
+===See also===
+*[[Frank]]
+
+[[it:frank]]
+[[ru:Frank]]
