--- a/wiki/environment.wikitext
+++ b/wiki/environment.wikitext
@@ -17,7 +17,7 @@
 *Finnish: [[ympäristö]] (1-3) ([[:fi:ympäristö|Suomi]])
 *Japanese: [[環境]] ([[かんきょう]], kankyō)
 *Swedish: [[miljö]] (1,2,3), [[natur]] (1)
-*Portuguese: [[meio ambiente]] (1); [[ambiente]] (1-2);
+*{{pt}}: [[meio ambiente]] (1); [[ambiente]] (1-2);
 
 [[pt:Environment]]
 
