--- a/wiki/frank.wikitext
+++ b/wiki/frank.wikitext
@@ -1,12 +1,16 @@
 ==English==
-===Adjective===
-'''frank''' (''[[comparative]]'' '''franker''', ''[[superlative]]'' '''frankest''')
+===Proper noun===
+'''Frank'''
 
-#[[Honest]], especially in an manner that seems slightly [[blunt]].
-#:''May I be frank with you?''
+#<!--definition needed here: old French person-->
+#A shortened form of the male [[given name]] [[Francis]], now considered as a name in its own right.
+
+----
+==German==
+===Noun===
+'''Frank'''
+
+#Frank (''male given name'')
 
 ===See also===
-*[[Frank]]
-
-[[it:frank]]
-[[ru:Frank]]
+*[[frank]]
