see also <Pa#145495>

--- a/wiki/PA.wikitext
+++ b/wiki/PA.wikitext
@@ -4,4 +4,6 @@
 #{{chemistry}} The symbol for [[protactinium]].
 #(''metrology'') The symbol for [[pascal]], a [[unit]] of [[pressure]] and of [[stress]].
 [[Category:Symbols]]
-----
+
+==See also==
+*[[pa]]
