--- a/wiki/PA.wikitext
+++ b/wiki/PA.wikitext
@@ -1,6 +1,6 @@
 ==Translingual==
+===Symbol===
 '''Pa'''
-
 #{{chemistry}} The symbol for [[protactinium]].
 #(''metrology'') The symbol for [[pascal]], a [[unit]] of [[pressure]] and of [[stress]].
 [[Category:Symbols]]
