--- a/wiki/PA.wikitext
+++ b/wiki/PA.wikitext
@@ -1,9 +1,103 @@
-==Translingual==
-===Symbol===
-'''Pa'''
-#{{chemistry}} The symbol for [[protactinium]].
-#(''metrology'') The symbol for [[pascal]], a [[unit]] of [[pressure]] and of [[stress]].
-[[Category:Symbols]]
+==English==
+
+===Pronunciation===
+*[[w:IPA|IPA]]: /paː/
+*[[w:SAMPA|SAMPA]]: /pa:/
+
+===Noun===
+'''pa''' (not generally used in the plural)
+
+#(''colloquially and in direct address'') [[Father]], [[papa]].
+#A short form of [[grandpa]], grandfather.
+
+====Usage note====
+*Often capitalized when used to refer to a specific person; see [[Pa]].
+:''Hey, Pa, I'd like you to meet my friend Jamie.''
+
+====Synonyms====
+*(father): [[da]] (''Irish''), [[dad]], [[daddy]], [[papa]], [[pater]]
+*(grandfather): [[grandpa]], [[grandpappy]]
+
+====Translations====
+
+'''father'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+*French: [[papà#French|papà]] ''m''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+*Italian: [[papà#Italian|papà]] ''m'', [[babbo#Italian|babbo]] ''m''
+|}
+|}
+
+'''grandfather'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+*French: [[pépé]] ''m''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+*Italian: [[nonno]] ''m''
+|}
+|}
+
+===See also===
+*[[grandpa]]
+*[[ma]]
+
+----
+==Guarani==
+===Cardinal number===
+'''pa'''
+
+#[[ten]]
+
+----
+==Lojban==
+'''pa'''
+
+#[[one]]
+----
+
+==Maori==
+===Noun===
+'''pa''' (''plural'' and "cases" invariable in Maori but English use may have '''pas''')
+
+#A [[Maori]] fortified camp.
+
+'''Maori fortified camp'''
+===Variant spelling===
+'''[[pah]]''' (not used in written Maori)
+
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+|}
+|}
+
+[[category:Maori nouns]]
+----
+==Romanian==
+===Interjection===
+'''pa'''
+
+#[[goodbye]]
 
 ==See also==
-*[[pa]]
+*[[Pa]]
+
+[[fr:Pa]]
+[[gl:Pa]]
+[[pl:Pa]]
