--- a/wiki/c.wikitext
+++ b/wiki/c.wikitext
@@ -2,6 +2,8 @@
 ===Symbol===
 '''C'''
 #{{chemistry}} the symbol for [[carbon]]
+#(''metrology'') the symbol for [[coulomb]], a [[unit]] of [[electric charge]].
+
 ===See also===
 *[[c]]
 [[Category:Symbols]]
