--- a/wiki/PA.wikitext
+++ b/wiki/PA.wikitext
@@ -1,3 +1,11 @@
+==Translingual==
+===Symbol===
+'''Pa'''
+#{{chemistry}} The symbol for [[protactinium]].
+#(''metrology'') The symbol for [[pascal]], a [[unit]] of [[pressure]] and of [[stress]].
+[[Category:Symbols]]
+
+----
 ==English==
 
 ===Pronunciation===
@@ -11,7 +19,7 @@
 #A short form of [[grandpa]], grandfather.
 
 ====Usage note====
-*Often capitalized when used to refer to a specific person; see [[Pa]].
+*Often capitalized when used to refer to a specific person.
 :''Hey, Pa, I'd like you to meet my friend Jamie.''
 
 ====Synonyms====
@@ -53,51 +61,5 @@
 *[[ma]]
 
 ----
-==Guarani==
-===Cardinal number===
-'''pa'''
-
-#[[ten]]
-
-----
-==Lojban==
-'''pa'''
-
-#[[one]]
-----
-
-==Maori==
-===Noun===
-'''pa''' (''plural'' and "cases" invariable in Maori but English use may have '''pas''')
-
-#A [[Maori]] fortified camp.
-
-'''Maori fortified camp'''
-===Variant spelling===
-'''[[pah]]''' (not used in written Maori)
-
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-|}
-|}
-
-[[category:Maori nouns]]
-----
-==Romanian==
-===Interjection===
-'''pa'''
-
-#[[goodbye]]
-
 ==See also==
-*[[Pa]]
-
-[[fr:Pa]]
-[[gl:Pa]]
-[[pl:Pa]]
+*[[pa]]
