[[xe]] moved to [[Xe]]: caps <xe#174214>

--- a/wiki/Xe.wikitext
+++ b/wiki/Xe.wikitext
@@ -1,13 +1,1 @@
-==Translingual==
-
-===Proper noun===
-'''Xe'''
-
-# {{chemistry}} symbol for [[xenon]]
-[[Category:Symbols]]
-
-[[fr:Xe]]
-[[la:Xe]]
-[[ja:Xe]]
-[[pl:Xe]]
-[[pt:Xe]]
+#redirect [[Xe]]
