/* Translations */ <ad libitum#6625>

--- a/wiki/ad_libitum.wikitext
+++ b/wiki/ad_libitum.wikitext
@@ -11,5 +11,5 @@
 *[[German]]: [[beliebig]] 
 *[[Interlingua]]: [[ad lib]] 
 *[[Italian]]: [[a volontà]] 
-*[[Portuguese]]: [[de improviso]] 
+*[[Portuguese]]: [[a vontade]], (música) [[de improviso]]
 *[[Spanish]]: [[a voluntad]]
