spliting entry <main#37648>

--- a/wiki/main.wikitext
+++ b/wiki/main.wikitext
@@ -1,1 +1,73 @@
-#redirect [[main]]
+==English==
+===Etymology===
+Middle English [[mayn]], ''main'', from Old English [[mægen]], "strength", from common Germanic ''*maginam'', from Proto-Indo-European ''*magh-''.
+
+===Pronunciation===
+{| border=1 cellpadding=5
+| [[w:AHD|AHD]] || mān
+|-
+| [[w:IPA|IPA]] || /meɪn/
+|-
+| [[w:SAMPA|SAMPA]] || /<tt>meIn</tt>/
+|}
+
+====Homophones====
+*[[mane]]
+
+===Adjective===
+'''main''' (no comparative or superlative forms)
+# principal, most important
+
+====Translations====
+*Arabic: [[رئيسي|رَئِيسِيّ]] (raʾīsī) <!-- verify? -->
+*[[Chinese]]: [[首要]] (shǒuyào), [[重要]] (zhòngyào)
+*Dutch: [[hoofdzakelijk]], [[hoofdzakelijke]], [[belangrijkst]], [[belangrijkste]]
+*Esperanto: [[ĉefa]]
+*Finnish: [[tärkein]]
+*French: [[principal]]
+*German: [[hauptsächlich]]
+*Hebrew: [[ראשי]] (Ra'shi) ''m'', [[ראשית]] (Ra'shit) ''f'', [[ראשיים]] (Ra'shi'yim) ''m pl'', [[ראשיות]] (Ra'shi'yot) ''f pl''
+*Russian: [[главный|гла́вный]] (glavnyj), [[основной|основно́й]] (osnovnoj)
+
+===Noun===
+'''main''' (pl. [[mains]])
+
+# [[mainland]].  (This term is rare in modern usage.)
+# the [[high seas]].  (This term is rare in modern usage, except in the phrase "the Spanish Main.")
+# a large [[pipe]] or [[cable]] providing [[utility]] service to a building or area.  (''Water main'', ''electric main'')
+# (''Nautical'') shortened form of ''[[mainsail]]''.
+#strength. (Obsolete except in the phrase "might and main")
+
+====Translations====
+*[[Chinese]]: [[主要]] (zhǔyào)
+*Finnish: [[pää-]] (3) (pääjohto, pääputki,...)
+*German: [[Festland]] ''n'' (1), [[hohe See]] ''f'' (2), [[Leitung]] ''f'' (3), [[Großsegel]] ''n'' (4)
+
+=== See also ===
+[[Main]]
+
+----
+
+==French==
+===Pronunciation===
+{| border=1 cellpadding=5
+| [[w:IPA|IPA]] ||  /mɛ̃/
+|-
+| [[w:X-SAMPA|X-SAMPA]] || /mE~/ 
+<!-- Marked as X-SAMPA because French SAMPA calls this vowel /e~/, which doesnt match the IPA -->
+|}
+
+===Homophones===
+[[maint]]
+
+===Noun===
+'''main''' ''f''
+# [[hand]].
+
+===Synonyms===
+[[louche]], [[mimine]], [[paluche]], [[pince]]
+
+[[et:main]]
+[[fr:main]]
+[[it:main]]
+[[ja:main]]
