--- a/wiki/ag.wikitext
+++ b/wiki/ag.wikitext
@@ -1,61 +1,9 @@
 ==Translingual==
-====Etymology====
-From [[Latin]] ''[[argentum]]''
-
-===Noun===
-'''ag'''
-#[[attogram]]
+===Symbol===
+'''Ag'''
+#{{chemistry}} symbol for [[silver]]
+[[Category:Symbols]]
 
 ----
-
-==Brithenig==
-===Noun===
-'''ag''' ''f''
-
-#[[water]]
-----
-==Irish==
-===Particle===
-Used with the [[verbal noun]] to make a [[progressive]] [[aspect]]:
-*ag [[siúl]] - [[walk]]ing
-*ag [[gáire]] - [[laugh]]ing
-
-====Pronunciation====
-*{{IPA|[&#601;]}} before a consonant
-*{{IPA|[&#601;g]}} before a vowel
-
-===Preposition===
-#[[at]]
-
-Also used to indicate possession in place a verb meaning '[[have]]':
-*Tá teach '''ag''' Seán - Seán has a house
-
-====Pronunciation====
-{{IPA|[eg&#690;]}}
-
-====Inflection====
-*'''[[agam]]''' - at [[me]]
-*'''[[agat]]''' - at [[you]] ([[singular|sg.]])
-*'''[[aige]]''' - at [[him]]
-*'''[[aici]]''' - at [[her]]
-*'''[[againn]]''' - at [[us]]
-*'''[[agaibh]]''' - at [[you]] ([[plural|pl.]])
-*'''[[acu]]''' - at [[them]]
-
-[[Category:Irish language]]
-----
-
-==Volapük==
-===interjection===
-'''ag'''!
-
-# [[oh]]! cry of [[pain]] or [[surprise]]
-# [[ah]]! cry of surprise
-----
-
-== See also ==
-*[[Ag]]
-
-[[fr:Ag]]
-[[ja:Ag]]
-[[pl:Ag]]
+==See also==
+*[[ag]]
