--- a/wiki/attogram.wikitext
+++ b/wiki/attogram.wikitext
@@ -1,9 +1,10 @@
+==English==
+===Etymology===
+{{E.}} ''[[atto-]]'' + ''[[gram]]''
+
+===Noun===
 '''attogram'''
+#a unit of [[mass]] equal to 0.000&nbsp;000&nbsp;000&nbsp;000&nbsp;000&nbsp;001 [[gram]]s
 
-==Etymology==
-
-''[[atto-]]'' + ''[[gram]]''
-
-==Noun==
-
-A unit of [[mass]] equal to 0.000&nbsp;000&nbsp;000&nbsp;000&nbsp;000&nbsp;001 [[gram]]s and with symbol ag.
+===Related terms===
+*[[ag]]
