--- a/wiki/AM.wikitext
+++ b/wiki/AM.wikitext
@@ -1,13 +1,46 @@
 ==English==
-===Abbreviation===
-#(Sometimes lower case) From Latin [[ante meridiem]], meaning "before [[noon]] (12:00)".
-#*''See also:'' [[A.M.]]
-#Amplitude Modulation
-#*''Contrasted with'' [[FM]]
-#Assembly Member: a title similar to MP, placed after the name of a Member of the Welsh National Assembly.
+
+===Verb===
+'''am'''
+
+# Guitar Chord - ''A minor''. Played 0 1 2 2 0 0  
+
+# The first-person singular present tense of ''to [[be]]''.
+
+==== Translations ====
+*Basque: [[naiz]]
+*Czech: [[jsem]], [[jsu]]
+*Danish: [[er]]
+*Dutch: [[ben]]
+*Finnish: [[olen]]
+*French: [[suis]]
+*German: [[bin]]
+*Greek: [[είμαι]]
+*Irish: [[tá]], [[táim]]
+*Italian: [[sono]]
+*Latin: [[sum]]
+*Polish: [[jestem]]
+*Slovak: [[som#Slovak|som]]
+*Spanish: [[estoy]], [[soy]]
+*Swedish: [[är]]
+*Vietnamese: [[là]] (not translated in some cases)
+*Volapük: [[binob]]
 
 ----
 
-==Portuguese==
-===Abbreviation===
-#[[Amazonas]] (Brazilian state)
+==Yucatec==
+
+===Noun===
+'''am'''
+
+# [[spider]], [[arachnid]]
+
+----
+
+==See also==
+*[[Am]]
+
+[[de:am]]
+[[gl:Am]]
+[[ja:am]]
+[[pl:Am]]
