--- a/wiki/Simplified_Chinese.wikitext
+++ b/wiki/Simplified_Chinese.wikitext
@@ -1,18 +1,1 @@
-==English==
-===Noun===
-'''[[Simplified]] [[Chinese]]'''
-
-# Simplified Chinese characters are simplified versions of [[hanzi]] that are used in People's Republic of [[China]].
-
-====Antonyms====
-*[[Traditional Chinese]]
-
-====Translations====
-*[[French]]: [[chinois]] [[simplifié]] ''m''
-*[[Simplified Chinese]]: [[简体]]字 (jiǎntǐzì)
-*[[Traditional Chinese]]: [[簡體]]字
-
-===See also===
-*[[shinjitai]] (simplified in Japan)
-
-[[nl:simplified Chinese]]
+#redirect [[Simplified Chinese]]
