--- a/wiki/AM.wikitext
+++ b/wiki/AM.wikitext
@@ -1,46 +1,9 @@
-==English==
-
-===Verb===
-'''am'''
-
-# Guitar Chord - ''A minor''. Played 0 1 2 2 0 0  
-
-# The first-person singular present tense of ''to [[be]]''.
-
-==== Translations ====
-*Basque: [[naiz]]
-*Czech: [[jsem]], [[jsu]]
-*Danish: [[er]]
-*Dutch: [[ben]]
-*Finnish: [[olen]]
-*French: [[suis]]
-*German: [[bin]]
-*Greek: [[είμαι]]
-*Irish: [[tá]], [[táim]]
-*Italian: [[sono]]
-*Latin: [[sum]]
-*Polish: [[jestem]]
-*Slovak: [[som#Slovak|som]]
-*Spanish: [[estoy]], [[soy]]
-*Swedish: [[är]]
-*Vietnamese: [[là]] (not translated in some cases)
-*Volapük: [[binob]]
-
+==Translingual==
+===Symbol===
+'''Am'''
+#{{chemistry}} symbol for [[americium]]
+[[Category:Symbols]]
 ----
 
-==Yucatec==
-
-===Noun===
-'''am'''
-
-# [[spider]], [[arachnid]]
-
-----
-
-==See also==
-*[[Am]]
-
-[[de:am]]
-[[gl:Am]]
-[[ja:am]]
-[[pl:Am]]
+===See also===
+*[[am]]
