[[uS]] moved to [[US]] <US#8251>

--- a/wiki/us.wikitext
+++ b/wiki/us.wikitext
@@ -1,1 +1,16 @@
-#redirect [[us]]
+==English==
+
+===Abbreviation===
+
+#[[United States]].  ''See also'' [[USA]].
+
+====Translations====
+
+*{{fr}}: [[EU]] ''m pl''
+*{{de}}: USA ''pl''
+*Greek: [[&Eta;.&Pi;.&Alpha;.]] ''f pl''
+*{{pt}}: [[E.U.A.]] ''m pl''
+*{{it}}: [[U.S.A.]] ''m pl''
+*{{es}}: [[EE. UU.]] ''m pl''
+
+[[pl:US]]
