splitting entry <Lima#138382>

--- a/wiki/lima.wikitext
+++ b/wiki/lima.wikitext
@@ -1,1 +1,33 @@
-#redirect [[lima]]
+==English==
+===Pronunciation===
+====Homophones====
+*[[lemur]] (''in [[non-rhotic]] accents'')
+
+===Proper noun===
+'''Lima'''
+
+#The capital of [[Peru]].
+#The letter ''L'' in the [[NATO phonetic alphabet]].
+
+===Related terms===
+*[[lima bean]]
+
+===See also===
+*[[w:Lima|Wikipedia article on Lima]]
+
+----
+==Spanish==
+===Noun===
+===Proper noun===
+{{wikipedia}}
+'''Lima'''
+
+#The capital of [[Peru]].
+
+===See also===
+[[lima]]
+
+[[gl:Lima]]
+[[hu:Lima]]
+[[pl:Lima]]
+[[pt:Lima]]
