splitting entry <lima#53280>

--- a/wiki/lima.wikitext
+++ b/wiki/lima.wikitext
@@ -1,33 +1,48 @@
-==English==
+==Filipino==
 ===Pronunciation===
-====Homophones====
-*[[lemur]] (''in [[non-rhotic]] accents'')
+*lee-mah'
 
-===Proper noun===
-'''Lima'''
-
-#The capital of [[Peru]].
-#The letter ''L'' in the [[NATO phonetic alphabet]].
-
-===Related terms===
-*[[lima bean]]
-
-===See also===
-*[[w:Lima|Wikipedia article on Lima]]
+===Number===
+'''lima'''
+#[[five]]
 
 ----
-==Spanish==
+==Finnish==
 ===Noun===
-===Proper noun===
-{{wikipedia}}
-'''Lima'''
+'''lima'''
 
-#The capital of [[Peru]].
+#[[mucus]]
+#[[phlegm]]
+#[[slime]].
 
 ===See also===
-[[lima]]
+*[[räkä]]
 
-[[gl:Lima]]
-[[hu:Lima]]
-[[pl:Lima]]
-[[pt:Lima]]
+----
+==Indonesian==
+===Number===
+'''lima'''
+#[[five]]
+
+==Spanish==
+===Noun===
+'''lima''' ''f''
+
+# [[lime]] (fruit)
+# [[file]] (tool to smoothen a surface)
+
+====Derived terms====
+*[[limón]]
+
+===See also===
+*[[Lima]]
+
+===Verb===
+'''lima'''
+
+# 3rd person present of ''[[limar]]'', ''to [[file]]''.
+
+[[gl:lima]]
+[[hu:lima]]
+[[pl:lima]]
+[[pt:lima]]
