[[amerikka]] moved to [[Amerikka]]: uppercase <amerikka#174238>

--- a/wiki/Amerikka.wikitext
+++ b/wiki/Amerikka.wikitext
@@ -1,7 +1,1 @@
-==Finnish==
-===Proper Noun===
-'''Amerikka'''
-#[[America]]
-#(''spoken language'') [[USA]] 
-
-[[fi:Amerikka]]
+#redirect [[Amerikka]]
