[[usa]] moved to [[Usa]]: uppercase <usa#174239>

--- a/wiki/USA.wikitext
+++ b/wiki/USA.wikitext
@@ -1,23 +1,1 @@
-==English==
-A country in the middle of Northern America, it contains 50 states.
-===Abbreviation===
-
-# [[United States|United States of America]].  ''See also'' [[US]].
-# (''US'') [[United States Army]].
-
-====Translations====
-*{{zh}}: [[USA]] (1)
-*{{fi}}: [[USA]] (1)
-*{{fr}}: [[EUA]] ''m pl'' (1)
-*{{de}}: USA ''pl'' (1), [[Vereinigte Staaten]]
-*{{it}}: [[U.S.A.]] ''m pl'' (1)
-*{{pt}}: [[EUA]] ''m pl'' (1)
-*[[Slovene]]: [[ZDA]] ''f pl'' (1)
-*{{es}}: [[EE. UU.]] ''m pl'' (1)
-
-[[de:USA]]
-[[hu:Amerikai Egyesült Államok]]
-[[pl:USA]]
-[[pt:USA]]
-[[fi:USA]]
-[[sv:USA]]
+#redirect [[Usa]]
