splitting entry <Cu#31474>

--- a/wiki/Cu.wikitext
+++ b/wiki/Cu.wikitext
@@ -1,10 +1,8 @@
-==Neapolitan==
-===Preposition===
-'''cu'''
-#[[with]]
+==Translingual==
+'''Cu'''<br>{{chemistry}} symbol for [[copper]]
+[[Category:Symbols]]
 
-===See also===
-[[Cu]]
-
-[[de:cu]]
-[[it:cu]]
+[[fr:Cu]]
+[[gl:Cu]]
+[[ja:Cu]]
+[[pl:Cu]]
