--- a/wiki/Ulster.wikitext
+++ b/wiki/Ulster.wikitext
@@ -5,3 +5,6 @@
 #(Geographical) The northern province of Ireland, comprising of six Northern Irish counties and three counties in the Republic of Ireland.
 #(Political) Alternate name used for the six counties that make up Northern Ireland.
 <P>{{wikipedia}}
+
+====Translations====
+*'''Irish''': [[uladh]]
