/* Proper noun */ <Ireland#2356>

--- a/wiki/Ireland.wikitext
+++ b/wiki/Ireland.wikitext
@@ -1,7 +1,7 @@
 ==English==
 ===Proper noun===
 # A large island in NW Europe.
-# A state occupying the six north east most conties of the island of Ireland.
+# A state occupying the six north east most counties of the island of Ireland.
 
 ===Related terms===
 *[[Irish]]
