Change English to Translingual <Hz#72893>

--- a/wiki/Hz.wikitext
+++ b/wiki/Hz.wikitext
@@ -1,7 +1,10 @@
-==English==
+==Translingual==
 ===Symbol===
 '''Hz'''
-#The symbol for '''[[hertz]]''', a [[unit]] of frequency.
+#(''metrology'') The symbol for '''[[hertz]]''', a [[unit]] of frequency.
+
+----
+[[Category:Symbols]]
 
 [[de:Hz]]
 [[fr:Hz]]
