[[pb]] moved to [[Pb]]: capitalization <pb#174243>

--- a/wiki/PB.wikitext
+++ b/wiki/PB.wikitext
@@ -1,14 +1,1 @@
-==Translingual==
-
-'''Pb'''
-
-# {{chemistry}} symbol for [[lead]].
-[[Category:Symbols]]
-===Etymology===
-
-[[Latin]] [[plumbum]]
-
-[[de:Pb]]
-[[fr:Pb]]
-[[ja:Pb]]
-[[pl:Pb]]
+#redirect [[Pb]]
