--- a/wiki/at.wikitext
+++ b/wiki/at.wikitext
@@ -1,1 +1,175 @@
-#redirect [[at]]
+
+
+==English==
+
+===Etymology===
+Middle English < Old English '''[[æt]]''' < Proto-Germanic '''*at''', '''*az''' < Proto-Indo-European '''[[*ad-]]''' (to, near, at).
+
+===Pronunciation===
+* [[AHD]] ăt
+* [[IPA]] [æt], reduced form [ət]
+* [[SAMPA]] <tt>[{t]</tt>
+*{{audio|en-us-at.ogg|Audio (US)}}
+*:[[Rhymes:English:-æt|Rhymes: -æt]]
+
+===Preposition===
+'''at'''
+
+# indicating place
+#: ''At that precise position.''
+# indicating time
+#: ''At six o'clock.''
+# indicating a target
+#: ''He threw a rock at me.''
+# indicating state
+#: ''Men at work.''
+
+====Translations====
+'''at''' (indicating place)
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+*Arabic: [[في]] (fi)
+*[[Breton]]: [[e#Breton|e]]
+*Bulgarian: [[в#Bulgarian|в]] (v), [[на#Bulgarian|на]] (na), [[при#Bulgarian|при]] (pri), [[до#Bulgarian|до]] (do)
+*Chinese: [[在]] (zài)
+*Czech: [[u#Czech|u]]
+*{{da}}: [[på]]
+*Dutch: [[op]], [[bij]]
+*[[Esperanto]]: [[sur#Esperanto|sur]]
+*{{fo}}: [[í]] / [[á]] / [[hjá]] / [[til]]
+*Finnish: [[-lla]] / [[-llä]] ''([[adessive case]])''; <br> [[-ssa]] / [[-ssä]] ''([[inessive case]])''
+*French: [[à]], [[en#French|en]]
+*German: [[an#German|an]], [[auf]], [[bei]], [[in#German|in]]
+*Hungarian: [[-n]] / [[-on]] / [[-en]] / [[-ön]] ''([[superessive case]])''; [[-nál]] / [[-nél]] ''([[adessive case]])''
+|}
+| width=1% |
+|bgcolor="FFFFE0" valign=top width=48%|
+{|
+*{{io}} : [[ye]]
+*[[Interlingua]]: [[a#Interlingua|a]], [[in#Interlingua|in]]
+*Irish: [[ag#Irish|ag]]
+*Italian: [[a#Italian|a]], [[in#Italian|in]]
+*Japanese: [[で]] (de), [[に]] (ni)
+*Korean: [[~에서]] (-eseo)
+*[[Persian]]: [[در|دَر]] (dær)
+*Polish: [[przy]]
+*Portuguese: [[a#Portuguese|a]], [[em]]
+*Russian: [[в]] (v), [[на]] (na), [[при]] (pri), [[у]] (u), [[возле]] (vózle)
+*Spanish: [[a#Spanish|a]], [[en#Spanish|en]]
+*Swedish: [[på]], [[vid]], (''not always directly translated '')
+*:''At home'' = ''hemma''
+*:''At work'' = ''på jobbet''
+*:''At the table'' = ''vid bordet''
+*Thai: [[ณ]] (nā)
+*Turkish: [[-da]], [[-de]]
+*Vietnamese: [[ở tại]], [[lúc]], [[vào]]
+|}
+|}
+
+'''at''' (indicating time)
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+*Arabic: [[في]] (fi)
+*[[Breton]]: [[da#Breton|da]]
+*Bulgarian: [[в#Bulgarian|в]] (v)
+*Czech: [[u#Czech|u]]
+*{{da}}: [[på]]
+*Dutch: [[om]]
+*[[Esperanto]]: [[je#Esperanto|je]]
+*Finnish: [[-lta]] / [[-ltä]] ''([[ablative case]])''; <br> [[-na]] / [[-nä]] ''([[essive case]])''
+*French: [[à]]
+*German: [[um]]
+|}
+| width=1% |
+|bgcolor="FFFFE0" valign=top width=48%|
+{|
+*Hungarian: [[-kor]] ''([[temporalis case]])''
+*[[Interlingua]]: [[a#Interlingua|a]]
+*Italian: [[a#Italian|a]]
+*Japanese: [[に]] (ni)
+*Polish: [[w#Polish|w]]
+*Portuguese: [[a#Portuguese|a]]
+*Russian: [[в]] (v)
+*Spanish: [[a#Spanish|a]]
+*{{sv}}: [[vid]] (''not always translated'')
+*:''At five o'clock'' = ''klockan fem'' or ''vid fem'' (''informal'')
+*:''At midnight'' = ''vid midnatt''
+|}
+|}
+
+'''at''' (indicating a target)
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+*Arabic: [[في]] (fi)
+*Bulgarian: [[в#Bulgarian|в]] (v), [[на#Bulgarian|на]] (na)
+*Chinese: [[在]] (zài)
+*Czech: [[u#Czech|u]]
+*{{da}}: [[på]]
+*Dutch: [[op]]
+*[[Esperanto]]: [[al#Esperanto|al]]
+*{{fo}}: [[eftir]] ''([[dative case]])''
+*Finnish: [[-lle]] ''([[allative case]])''; [[kohti]]
+*French: [[à]]
+*German: [[nach]], [[zu]]
+|}
+| width=1% |
+|bgcolor="FFFFE0" valign=top width=48%|
+{|
+*Hungarian: [[-t]] (''[[accusative case]]'')
+*[[Interlingua]]: [[a#Interlingua|a]]
+*Irish: [[ag#Irish|ag]]
+*Italian: [[a#Italian|a]]
+*Japanese: [[に]] (ni), [[を]] (o)
+*Korean: [[~에서]] (-eseo)
+*Portuguese: [[a#Portuguese|a]]
+*Russian: [[в]] (v), [[на]] (na)
+*Spanish: [[a#Spanish|a]]
+*Swedish: [[på]], [[mot#Swedish|mot]] 
+*:''Han kastade sten mot mig'' = ''He threw stones at (=towards) me''
+*:''Han kastade sten på mig'' = ''He threw stones at me'' (''...and it hit'')
+*Thai: [[ณ]] (nā)
+|}
+|}
+----
+
+==Danish==
+=== Conjunction ===
+'''at'''
+
+# [[that]].
+
+----
+
+==Dutch==
+===Verb===
+'''at'''
+
+#singular past tense of [[eten]]
+
+----
+
+==Turkish==
+===Noun===
+'''at'''
+# [[horse]]
+
+----
+===See also===
+*[[At]]
+
+[[Category:English prepositions]]
+[[Category:100 English basic words]]
+
+[[it:at]]
+[[la:At]]
+[[hu:at]]
+[[ja:At]]
+[[pl:At]]
+[[sv:at]]
+[[tr:at]]
