--- a/wiki/Yb.wikitext
+++ b/wiki/Yb.wikitext
@@ -1,1 +1,7 @@
-#redirect [[Yb]]
+==Translingual==
+'''Yb'''<br>{{chemistry}} symbol for [[ytterbium]]
+[[Category:Symbols]]
+
+[[fr:Yb]]
+[[ja:Yb]]
+[[pl:Yb]]
