French etymology looked weird without é <credibility#49749>

--- a/wiki/credibility.wikitext
+++ b/wiki/credibility.wikitext
@@ -1,6 +1,6 @@
 == English ==
 === Etymology ===
-From the French ''[[crdibilit]]''
+From the French ''[[crédibilité]]''
 
 === Pronunciation ===
 *{{SAMPA}} /"krEd.@.bI.5I.ti/
