--- a/wiki/Yb.wikitext
+++ b/wiki/Yb.wikitext
@@ -1,5 +1,7 @@
 ==Translingual==
-'''Yb'''<br>{{chemistry}} symbol for [[ytterbium]]
+===Symbol===
+'''Yb'''
+#{{chemistry}} symbol for [[ytterbium]]
 [[Category:Symbols]]
 
 [[fr:Yb]]
