split article <Earnest#125044>

--- a/wiki/earnest.wikitext
+++ b/wiki/earnest.wikitext
@@ -1,1 +1,10 @@
-#redirect [[earnest]]
+===Proper noun===
+'''Earnest'''
+
+#A male name
+
+====Variant====
+*[[Ernest]]
+
+===See also===
+*[[earnest]]
