--- a/wiki/Zr.wikitext
+++ b/wiki/Zr.wikitext
@@ -1,1 +1,7 @@
-#redirect [[Zr]]
+==Translingual==
+'''Zr'''<br>{{chemistry}} symbol for [[zirconium]]
+[[Category:Symbols]]
+
+[[fr:Zr]]
+[[ja:Zr]]
+[[pl:Zr]]
