--- a/wiki/earnest.wikitext
+++ b/wiki/earnest.wikitext
@@ -1,10 +1,25 @@
-===Proper noun===
-'''Earnest'''
+==English==
+===Noun===
+'''earnest'''
 
-#A male name
+#[[Serious]]ness; [[reality]]; fixed [[determination]]; [[eager]]ness; [[intent]]ness.
+#Something given, or a part paid beforehand, as a pledge; pledge; handsel; a token of what is to come.
+#Something of value given by the buyer to the seller, by way of token or pledge, to bind the bargain and prove the sale.
 
-====Variant====
-*[[Ernest]]
+===Verb===
+'''to earnest'''
+
+#To use in earnest.
+
+===Adjective===
+'''earnest'''
+
+#Ardent in the pursuit of an object; eager to obtain or do; zealous with sincerity; with hearty endeavour; heartfelt; fervent; hearty; -- used in a good sense; as, earnest prayers.
+#Intent; fixed closely; as, earnest attention.
+#Serious; important.
 
 ===See also===
-*[[earnest]]
+*[[Earnest]]
+
+[[it:earnest]]
+[[pt:earnest]]
