--- a/wiki/Kr.wikitext
+++ b/wiki/Kr.wikitext
@@ -1,1 +1,7 @@
-#redirect [[Kr]]
+==Translingual==
+'''Kr'''<br>{{chemistry}} symbol for [[krypton]]
+[[Category:Symbols]]
+
+[[fr:Kr]]
+[[ja:Kr]]
+[[pl:Kr]]
