--- a/wiki/au.wikitext
+++ b/wiki/au.wikitext
@@ -1,5 +1,39 @@
-==English==
-===Symbol===
-'''AU'''
+== Catalan ==
+=== Noun ===
+'''au'''
+# [[bird]].
+----
 
-#[[astronomical unit]]
+== Fijian ==
+=== Pronoun ===
+'''au'''
+#[[I]]; [[me]]
+----
+
+==French==
+===Prepositoin===
+'''au'''
+----
+
+==Tongan==
+===Pronoun===
+'''au'''
+#[[I]]; [[me]]
+----
+
+==Tuvaluan==
+===Pronoun===
+'''au'''
+#[[I]]; [[me]]
+# contraction of [[à]] [[le]] (''to the'')
+----
+===See also===
+*[[Au]]
+
+[[Category:Fijian language]]
+[[Category:French language]]
+
+[[fr:Au]]
+[[ja:au]] 
+[[pl:au]]
+[[zh:au]]
