--- a/wiki/au.wikitext
+++ b/wiki/au.wikitext
@@ -1,39 +1,11 @@
-== Catalan ==
-=== Noun ===
-'''au'''
-# [[bird]].
-----
+==Translingual==
+===Etymology===
+*from [[Latin]] ''[[aurum]]''
 
-== Fijian ==
-=== Pronoun ===
-'''au'''
-#[[I]]; [[me]]
-----
+===Symbol===
+# {{chemistry}} Symbol for [[gold]].
+[[Category:Symbols]]
 
-==French==
-===Prepositoin===
-'''au'''
-----
-
-==Tongan==
-===Pronoun===
-'''au'''
-#[[I]]; [[me]]
-----
-
-==Tuvaluan==
-===Pronoun===
-'''au'''
-#[[I]]; [[me]]
-# contraction of [[à]] [[le]] (''to the'')
 ----
 ===See also===
-*[[Au]]
-
-[[Category:Fijian language]]
-[[Category:French language]]
-
-[[fr:Au]]
-[[ja:au]] 
-[[pl:au]]
-[[zh:au]]
+*[[au]]
