--- a/wiki/Kr.wikitext
+++ b/wiki/Kr.wikitext
@@ -1,5 +1,7 @@
 ==Translingual==
-'''Kr'''<br>{{chemistry}} symbol for [[krypton]]
+===Symbol===
+'''Kr'''
+#{{chemistry}} symbol for [[krypton]]
 [[Category:Symbols]]
 
 [[fr:Kr]]
