--- a/wiki/Bh.wikitext
+++ b/wiki/Bh.wikitext
@@ -1,7 +1,1 @@
-'''Bh'''<br>{{chemistry}} symbol for [[bohrium]]
-[[Category:Symbols]]
-
-[[fr:Bh]]
-[[gl:Bh]]
-[[ja:Bh]]
-[[pl:Bh]]
+#redirect [[Bh]]
