--- a/wiki/Bh.wikitext
+++ b/wiki/Bh.wikitext
@@ -1,1 +1,10 @@
-#redirect [[Bh]]
+==Translingual==
+===Symbol===
+'''Bh'''
+#{{chemistry}} symbol for [[bohrium]]
+[[Category:Symbols]]
+
+[[fr:Bh]]
+[[gl:Bh]]
+[[ja:Bh]]
+[[pl:Bh]]
