--- a/wiki/Db.wikitext
+++ b/wiki/Db.wikitext
@@ -1,7 +1,1 @@
-'''Db'''<br>{{chemistry}} symbol for [[dubnium]]
-[[Category:Symbols]]
-
-[[fr:Db]]
-[[ja:Db]]
-[[pl:Db]]
-[[zh:Db]]
+#redirect [[Db]]
