--- a/wiki/ell.wikitext
+++ b/wiki/ell.wikitext
@@ -1,10 +1,11 @@
 ==English==
-
+===Etymology===
+{{OE.}} ''eln'' "unit of measure of 45 inches," originally "length of the arm," from Proto-Indo-European ''*el-'' "elbow, forearm"
 ===Noun===
 
 '''ell'''
 
-#A measure for cloth.
+#A [[measure]] for [[cloth]].
 
 [[Category:English:Units of Measure]]
 
