--- a/wiki/Downe.wikitext
+++ b/wiki/Downe.wikitext
@@ -1,1 +1,4 @@
-Common variation of the spelling of the county Down in Ireland, also Downshire
+===Proper Noun===
+'''Downe'''
+
+Common variation of the spelling of the county [[Down]] in Ireland, also [[Downshire]]
