--- a/wiki/alegria.wikitext
+++ b/wiki/alegria.wikitext
@@ -1,12 +1,6 @@
-==[[Portuguese]]==
+==Portuguese==
 ===Noun===
-''feminine''
-#joy
-==Translations==
-*[[Esperanto]]: [[]]
-*[[French]]: [[]]
-*[[Interlingua]]: [[allegria]]
-*[[Italian]]: [[]]
-*[[Spanish]]: [[alegría]]
+'''alegria''' ''f''
+# [[joy]]
 
-[[fi:Alegria]]
+[[fi:alegria]]
