--- a/wiki/clad.wikitext
+++ b/wiki/clad.wikitext
@@ -1,4 +1,6 @@
 ==English==
+===Etymology===
+Alternate perfect and p.p. of [[cloth]]: {{OE.}} ''geclæþd'', pp. of ''clæþan'' "to clothe," from ''clað'' "cloth."
 
 ===Verb===
 {{en-infl-irreg|clad|clads|cladding|clad|clad}}
