--- a/wiki/Cu.wikitext
+++ b/wiki/Cu.wikitext
@@ -1,5 +1,7 @@
 ==Translingual==
-'''Cu'''<br>{{chemistry}} symbol for [[copper]]
+===Symbol===
+'''Cu'''
+#{{chemistry}} symbol for [[copper]]
 [[Category:Symbols]]
 
 [[fr:Cu]]
