--- a/wiki/Zn.wikitext
+++ b/wiki/Zn.wikitext
@@ -1,5 +1,7 @@
 ==Translingual==
-'''Zn'''<br>{{chemistry}} symbol for [[zinc]]
+===Symbol===
+'''Zn'''
+#{{chemistry}} symbol for [[zinc]]
 [[Category:Symbols]]
 
 [[fr:Zn]]
