hereditory can't be correct, can it? <atopic#68427>

--- a/wiki/atopic.wikitext
+++ b/wiki/atopic.wikitext
@@ -1,4 +1,4 @@
 ==English==
 ===Adjective===
 '''atopic'''
-#Of a [[hereditory]] [[predisposition]] towards developing [[hay fever]] and other [[allergic]] reactions.
+#Of a [[hereditary]] [[predisposition]] towards developing [[hay fever]] and other [[allergic]] reactions.
