--- a/wiki/insulate.wikitext
+++ b/wiki/insulate.wikitext
@@ -1,4 +1,6 @@
 ==English==
+===Etymology===
+Originally "make into an island", from {{L.}} pp. ''insulatus''.
 ===Verb===
 '''to insulate'''
 # to [[separate]], [[detach]], or [[isolate]]
@@ -7,9 +9,10 @@
 ====Translations====
 *German: [[isolieren]] (1,2)
 *Portuguese: [[isolar]] (1,2)
-
+*French: [[isoler]] (1,2)
 ===Related terms===
 *[[insulation]]
 *[[insulator]]
+*[[insulation]]
 *[[isolate]]
 *[[isolation]]
