lowercase version <ga#31478>

--- a/wiki/GA.wikitext
+++ b/wiki/GA.wikitext
@@ -1,1 +1,28 @@
-#redirect [[ga]]
+==Translingual==
+===Symbol===
+'''Ga'''
+# see [[Ga]]
+----
+
+==English==
+===Proper noun===
+'''Ga'''
+# see [[Ga]]
+
+----
+==Ewe==
+===Noun===
+'''ga'''
+
+#[[Money]].
+----
+==Manx==
+===Conjunction===
+'''ga'''
+#[[if]]
+
+[[Category:Manx language]]
+
+[[fr:Ga]]
+[[ja:Ga]]
+[[pl:Ga]]
