[[ucraina]] moved to [[Ucraina]]: uppercase <ucraina#174260>

--- a/wiki/Ucraina.wikitext
+++ b/wiki/Ucraina.wikitext
@@ -1,16 +1,1 @@
-==Italian==
-===Pronunciation===
-Ucràina, /uˈkraina/, /<tt>u"kraina</tt>/
-===Proper noun===
-'''Ucraina''' ''f''
-
-# [[Ukraine]]
-
-===Noun===
-'''ucraina''' ''f''
-
-# [[Ukrainian]] woman
-
-===Related terms===
-*[[ucraino]]
-[[Category:It:Countries]]
+#redirect [[Ucraina]]
