uppercase version <Ga#129458>

--- a/wiki/GA.wikitext
+++ b/wiki/GA.wikitext
@@ -1,28 +1,15 @@
 ==Translingual==
 ===Symbol===
 '''Ga'''
-# see [[Ga]]
+#{{chemistry}} symbol for [[gallium]]
+[[Category:Symbols]]
+
 ----
 
 ==English==
 ===Proper noun===
 '''Ga'''
-# see [[Ga]]
-
-----
-==Ewe==
-===Noun===
-'''ga'''
-
-#[[Money]].
-----
-==Manx==
-===Conjunction===
-'''ga'''
-#[[if]]
-
-[[Category:Manx language]]
-
-[[fr:Ga]]
-[[ja:Ga]]
-[[pl:Ga]]
+# A [[Niger-Congo]] language spoken in [[Ghana]] and [[Togo]].
+{{wikipedia}}
+====See also====
+*[http://www.ethnologue.com/show_language.asp?code=GAC Ethnologue entry on Ga]
