new, symbol <dB#174261>

--- a/wiki/Db.wikitext
+++ b/wiki/Db.wikitext
@@ -1,1 +1,7 @@
-#redirect [[Db]]
+==Translingual==
+===Symbol===
+'''dB'''
+#(''metrology'') The symbol for '''[[decibel]]'''
+
+----
+[[Category:Symbols]]
