--- a/wiki/mundo.wikitext
+++ b/wiki/mundo.wikitext
@@ -17,7 +17,7 @@
 
 ===Synonyms===
 
-*[[Orbe]] : this world is less used than mundo
+*[[orbe]] : this world is less used than mundo
 
-[[hu:Mundo]]
-[[pt:Mundo]]
+[[hu:mundo]]
+[[pt:mundo]]
