--- a/wiki/Persian.wikitext
+++ b/wiki/Persian.wikitext
@@ -1,134 +1,1 @@
-{{rfc}}
-==English==
-{{wikipedia}}
-===Etymology===
-From Middle English '''[[percynne]]''' < Middle French '''[[persien]]''' < Latin '''*[[Persianus]]''' < Latin '''[[Persia]]''' < Greek '''[[Περσίς]]''' < Old Persian '''[[Pārsa]]'''.
-
-===Noun===
-#The official language of Iran, Afghanistan and Tajikistan, Persian belongs to the Southwestern branch of the [[Iranian]] subfamily of the Indo-Iranian family of languages. Indo-Iranian itself is a subfamily of the Indo-European language family. Related languages are [[Kurdish]], [[Pashto]], and [[Avestan]]. Primarily spoken in Iran, Afghanistan, Tajikistan and Uzbekistan. Persian in its modern form was already standardised by the 10th century AD. It is one of the earliest standard languages and has one of the most extensive and exalted literatures among the world’s languages.
-#A [[cinnamon]] [[bun]] coated with [[pink]] [[icing]] on top (local [[colloquialism]], ''[http://en.wikipedia.org/wiki/Thunder_Bay%2C_Ontario Thunder Bay, Ontario], [[Canada]]'')
-#A breed of [[cat]]. [[category:cat]]
-
-====Translations====
-'''Persian language''' (''noun'')
-{{top}}
-*Arabic: {{ARchar|[[فارسي|فَارْسِي]]}} (fársi)
-*[[Armenian]]: [[Պարսկերեն]] (Parskeren)
-*[[Azeri]]: [[fars dili]]
-*[[Belarusian]]: [[пэрсійдзкая]] (persíjdzkaja)
-*Bulgarian: [[персийски]] (persíjski)
-*Chinese: [[波斯语]] (bōsīyǔ)
-*[[Croatian]]: [[perzijski]]
-*Czech: [[perský]]
-*Danish: [[persisk]]
-*Dutch: [[Perzisch]]
-*German: [[Persisch]]
-*[[Esperanto]]: [[Persa lingvo]]
-*Estonian: [[pärsia]]
-*[[Faeroese]]: [[persiskt]]
-*Finnish: [[persia]]
-*French: [[persan]] ''m''
-*[[Georgian]]: [[ფარსიული]] (parsiuli)
-*Greek (Ancient): [[περσιστί]] (persistí)
-*Greek (Modern): [[Περσικά]] (Persiká), [[Φαρσί]] (Farsí)
-*[[Gujarati]]: [[ફારસી]] (pharsī)
-*Hebrew: [[פרסית]] (parsít)
-{{mid}}
-*[[Hindi]]: [[फारसी]] (pharsī)
-*Hungarian: [[perzsa]]
-*Italian: [[persiano]]
-*Japanese: [[ペルシア語]] (pérushia-go)
-*Korean: [[페르샤어]] (pereusya-eo)
-*[[Kurdish]]: [[farisî]]
-*[[Nepali]]: [[पर्सियन]] (parsiyan)
-*Norwegian: [[persisk]]
-*Persian: [[فارسی]] (pārsi)
-*Polish: [[perski]]
-*Portuguese: [[persa]] ''m''
-*Russian: [[персидский]] (persídskij)
-*Spanish: [[persa]] ''m''
-*[[Swahili]]: [[Kiajemi]] ''(noun 7)''
-*Swedish: [[persiska]]
-*[[Tatar]]: [[farsí tele]]
-*[[Thai]]: {{THchar|[[ภาษาเปอร์เซีย]]}} (phaasáá puuhrsiia)
-*Turkish: [[farsça]]
-*Urdu: [[فارسي]] (fársi)
-*[[Vietnamese]]: [[tiếng Ba Tư]]
-{{bottom}}
-
-===Adjective===
-
-# Describes a person, place or object referring to Persia or Persians.
-
-====See also====
-*[[Iranian]] 
-*[[Tajiki-Persian]]
-*[[Dari-Persian]]
-*[[Farsi]]
-
-====Translations====
-
-*Arabic: {{ARchar|[[فارسي]]}} (fársi)
-*[[Bulgarian]]: [[персиец]] (persíets) ''m'', [[персийка]] (persíjka) ''f'' (1)
-*Danish: [[persianer]] (2)
-*Dutch: [[Pers]] ''m'', [[Perzische]] ''f'' (1); [[Perzisch]] ''n'' (2)
-*Chinese: [[波斯人]] (bōsīrén) (1)
-*[[Esperanto]]: [[perso]] (2)
-*Finnish: [[persialainen]] (1); [[persia]] (3)
-*French: [[Persan]] ''m'' (1,2)
-*German: [[Perser]] ''m'', [[Perserin]] ''f'' (1)
-*Greek: [[Πέρσης]] ''m'', [[Περσίδα]] ''f'' (1)
-*[[Gujarati]]: [[ફારસી]] (pharsī) (1)
-*[[Hindi]]: [[फ़ारसी]] (pharsī) (1)
-*Hungarian: [[perzsiai]] (2)
-*Indonesian: [[farsi]] (2)
-*Italian: [[persiano]] (2), [[persico]]
-*Korean: [[페르샤의]] (pereusya-ui) (2)
-*Persian: [[فارسی]] (pārsi) (2)
-*Polish: [[perski]] (2)
-*Portuguese: [[persa]] ''m/f'' (2)
-*Russian: [[персидский]] (persídskij) (2)
-*[[Slovak]]: [[peržan#Slovak|peržan]] ''m'', [[peržanka]] ''f'' (1); [[peržština]] ''f'' (2)
-*Spanish: [[persa]] ''m/f'' (2)
-*[[Swahili]]: [[kiajemi]] (2)
-*Swedish: [[perser]] ''m, pl'', [[persiska]] ''f'' (1,2)
-*Turkish: [[farsça]] (2)
-*[[Urdu]]: [[فارسي]] (fārsī)
-
-===Adjective===
-'''Persian'''
-
-# of, from, or pertaining to Persia.
-# of or pertaining to the Persian people.
-# of or pertaining to the Persian language.
-
-====Synonyms====
-*[[Iranian]] (2)
-
-====Translations====
-*[[Azeri]]: [[fars]]
-*Bulgarian: [[персийски]] (persíjski) ''m'' & ''pl''
-*Chinese: [[波斯]]的 (bōsī de) (1), [[波斯人]]的 (bōsīrén de) (2); [[波斯语]]的 (bōsīyǔ de) (3)
-*Danish: [[persisk]]
-*Dutch: [[Perzisch]], [[Perzische]]
-*[[Esperanto]]: [[persa]]
-*Finnish: [[persialainen]]
-*French: [[persan]]
-*German: [[persisch]]
-*Greek: [[περσικός]] (persikós)
-*Japanese: [[ペルシア]] (pérushia) (1), [[ペルシアの]] (pérushia no) (2), [[ペルシア人]] (pérushia-jin) (3)
-*[[Kurdish]]: [[farisî]]
-*Norwegian: [[persisk]]
-*Persian: [[ایرانی]] (irāni), [[فارسی]] (fārsi)
-*Polish: [[perski]]
-*Portuguese: [[persa]] ''m/f''
-*Russian: [[персидский]] (persídskij)
-*Slovak: [[perzský]] ''m'', [[perzská]] ''f'', [[perzské]] ''n''
-*Spanish: [[persa]] ''m/f''
-*Swedish: [[persisk]], [[persiska]]
-*[[Tatar]]: [[farsí]]
-*Turkish: [[İran]]
-
-[[gu:Persian]]
-[[hi:Persian]]
-[[pl:Persian]]
+#redirect [[Persian]]
