lowercase version <ge#31479>

--- a/wiki/ge.wikitext
+++ b/wiki/ge.wikitext
@@ -1,1 +1,19 @@
-#redirect [[ge]]
+==Translingual==
+===Symbol===
+'''Ge'''
+# see [[Ge]]
+----
+==Italian==
+===Abbreviation===
+[[Genova]]
+
+----
+==Swedish==
+===Verb===
+
+# [[give]]
+
+[[fr:Ge]]
+[[la:Ge]]
+[[ja:Ge]]
+[[pl:Ge]]
