--- a/wiki/MA.wikitext
+++ b/wiki/MA.wikitext
@@ -1,1 +1,13 @@
-#redirect [[MA]]
+==English==
+
+==={{Abbreviation}}===
+#[[Megaampere]]   (1,000,000 amperes)
+#[[Massachusetts]], a {{USstate}}
+#[[Master of Arts]] (Degree)
+----
+
+==Portuguese==
+===Abbreviation===
+#[[Maranhão]] (Brazilian state)
+
+[[pl:MA]]
