--- a/wiki/meadow.wikitext
+++ b/wiki/meadow.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Etymology===
-{{OE.}} mædwe, oblique case of ''mæd'' "meadow," from Proto-Germanic ''*mædwon'', from Proto-Indo-European ''*metwa-'' (''*me-'', "mow")
+{{OE.}} ''mædwe'', oblique case of ''mæd'' "meadow," from Proto-Germanic ''*mædwon'', from Proto-Indo-European ''*metwa-'' (''*me-'', "mow")
 ===Noun===
 '''meadow'''
 #A [[field]] or [[pasture]]; an area of low lying vegetation.
