uppercase version <Ge#129781>

--- a/wiki/ge.wikitext
+++ b/wiki/ge.wikitext
@@ -1,19 +1,7 @@
 ==Translingual==
 ===Symbol===
 '''Ge'''
-# see [[Ge]]
-----
-==Italian==
-===Abbreviation===
-[[Genova]]
-
-----
-==Swedish==
-===Verb===
-
-# [[give]]
-
-[[fr:Ge]]
-[[la:Ge]]
-[[ja:Ge]]
-[[pl:Ge]]
+#{{chemistry}} symbol for [[germanium]]
+===See also===
+*[[ge]]
+[[Category:Symbols]]
