--- a/wiki/b.wikitext
+++ b/wiki/b.wikitext
@@ -1,7 +1,28 @@
-==Translingual==
-===Symbol===
-'''B'''
-#{{chemistry}} symbol for [[boron]]
+== English ==
+[[Category:Symbols]]
+[[Category:Latin letters]]
+=== Noun ===
+'''B''' 
+#The second letter of the [[English]] [[alphabet]], preceded by [[A]] and followed by [[C]], and representing /b/. (''See [[appendix:English alphabet]]'')
+#A [[blood type]] that has a specific antigen that aggravates the immune response in people with type [[A]] antigen in their blood.  They can receive blood from type B or type [[O]], but cannot receive blood from [[AB]] or [[A]].
+#{{chemistry}}The symbol for [[boron]].
+
+----
 ===See also===
 *[[b]]
-[[Category:Symbols]]
+*[[Β]] ([[beta]])
+*[[В]] ([[ve]])
+
+
+[[de:B]]
+[[es:b]]
+[[eu:B]]
+[[fr:B]]
+[[gl:B]]
+[[ia:B]]
+[[la:B]]
+[[ja:B]]
+[[pl:B]]
+[[pt:B]]
+[[fi:B]]
+[[ur:B]]
