--- a/wiki/Br.wikitext
+++ b/wiki/Br.wikitext
@@ -1,4 +1,7 @@
-'''Br'''<br>{{chemistry}} symbol for [[bromine]]
+==Translingual==
+===Symbol===
+'''Br'''
+#{{chemistry}} symbol for [[bromine]]
 [[Category:Symbols]]
 
 [[fr:Br]]
