--- a/wiki/MA.wikitext
+++ b/wiki/MA.wikitext
@@ -1,13 +1,9 @@
-==English==
+==Translingual==
+===Symbol===
+'''mA'''
+#(''metrology'') The symbol for '''[[milliampere]]'''.
 
-==={{Abbreviation}}===
-#[[megaampere]]   (1,000,000 [[ampere]]s)
-#[[Massachusetts]], a {{USstate}}
-#[[Master of Arts]] (Degree)
-----
 
-==Portuguese==
-===Abbreviation===
-#[[Maranhão]] (Brazilian state)
-
-[[pl:MA]]
+==See also==
+*[[ma]]
+*[[MA]]
