--- a/wiki/crop.wikitext
+++ b/wiki/crop.wikitext
@@ -1,4 +1,6 @@
 ==English==
+===Etymology===
+{{OE.}} ''cropp'' "head or top of a sprout or herb."
 ===Pronunciation===
 *krŏp, /krɒp/, /krQp/
 
@@ -14,10 +16,13 @@
 *Russian: [[урожай]] /uroZaj/
 
 ===Verb===
-'''to crop''' ([[crops]], [[cropped]], [[cropping]])
+{{en-infl-reg-consonant|crop||p}}
 
-# to occur, be present. ''crop up''
+# to occur, be present.
 # To cut something (usually a picture)
 
+===Derived terms===
+*outcrop
+*crop up
 [[it:crop]]
 [[ru:Crop]]
