[[br]] moved to [[Br]]: uppercase <br#174271>

--- a/wiki/Br.wikitext
+++ b/wiki/Br.wikitext
@@ -1,10 +1,1 @@
-==Translingual==
-===Symbol===
-'''Br'''
-#{{chemistry}} symbol for [[bromine]]
-[[Category:Symbols]]
-
-[[fr:Br]]
-[[gl:Br]]
-[[ja:Br]]
-[[pl:Br]]
+#redirect [[Br]]
