--- a/wiki/Rb.wikitext
+++ b/wiki/Rb.wikitext
@@ -1,4 +1,7 @@
-'''Rb'''<br>{{chemistry}} symbol for [[rubidium]]
+==Translingual==
+===Symbol===
+'''Rb'''
+#{{chemistry}} symbol for [[rubidium]]
 [[Category:Symbols]]
 
 [[fr:Rb]]
