--- a/wiki/Rb.wikitext
+++ b/wiki/Rb.wikitext
@@ -1,10 +1,1 @@
-==Translingual==
-===Symbol===
-'''Rb'''
-#{{chemistry}} symbol for [[rubidium]]
-[[Category:Symbols]]
-
-[[fr:Rb]]
-[[la:Rb]]
-[[ja:Rb]]
-[[pl:Rb]]
+#redirect [[Rb]]
