nl+ <search engine#96172>

--- a/wiki/search_engine.wikitext
+++ b/wiki/search_engine.wikitext
@@ -4,4 +4,5 @@
 '''[[search]] [[engine]]'''
 #{{computing}} [[software]] that [[search]]es for, and [[retrieve]]s, [[data]] based on some [[criteria]], especially one that searches the [[Internet]] for [[document]]s containing [[specified]] [[word]]s
 ====Translations====
+*Dutch: [[zoekmotor]] ''m''
 *Swedish: [[sökmotor]] ''c''
