--- a/wiki/vorgehen.wikitext
+++ b/wiki/vorgehen.wikitext
@@ -1,8 +1,8 @@
-===Noun===
-'''Vorgehen''' ''n''
+==German==
+===Verb===
+'''vorgehen''' 
 
-#[[proceeding]]
-#[[procedure]]
+#to [[proceed]]
 
 ===See also===
-[[vorgehen]]
+[[Vorgehen]]
