[[aI]] moved to [[AI]] <AI#31455>

--- a/wiki/ai.wikitext
+++ b/wiki/ai.wikitext
@@ -1,1 +1,12 @@
-#redirect [[ai]]
+==English==
+
+===Initialism===
+'''AI''', '''A.I.'''
+
+# {{comptheory}} [[artificial intelligence]]
+# {{management}} [[action item]]
+
+====Translations====
+*Greek: [[Τ.Ν.]]
+
+[[de:AI]][[pl:AI]]
