[[aSEAN]] moved to [[ASEAN]] <ASEAN#67737>

--- a/wiki/ASEAN.wikitext
+++ b/wiki/ASEAN.wikitext
@@ -1,1 +1,8 @@
-#redirect [[asean]]
+=={{en}}==
+
+===Noun===
+'''ASEAN'''
+# (abbreviation) Association of Southeast Asian Nations
+
+===See also===
+* [[w:ASEAN|Wikipedia article on ASEAN]]
