--- a/wiki/Sr.wikitext
+++ b/wiki/Sr.wikitext
@@ -1,17 +1,14 @@
 ==Translingual==
+===Symbol===
 '''Sr'''
 #{{chemistry}} symbol for [[strontium]]
 [[Category:Symbols]]
 
 ----
 ==English==
-===Etymology===
-Abbreviation of [[Senior]]
-
-===Abbreviation===
+==={{Abbreviation}}===
 '''Sr.''' ''or'' '''Sr''' (''British'')
-
-# A title used after a [[father]]'s name when his [[son]] is given the same name.
+# [[Senior|senior]]; A title used after a [[father]]'s name when his [[son]] is given the same name.
 #:''John Doe Sr.''
 
 ====See also====
