--- a/wiki/treff.wikitext
+++ b/wiki/treff.wikitext
@@ -1,1 +1,10 @@
-#redirect [[treff]]
+==Hungarian==
+===Noun===
+'''treff'''
+# [[club]] (a [[playing card]] marked with the symbol ♣)
+
+[[Category:Hungarian nouns]]
+
+
+=== See also===
+*[[Treff]]
