[[sr]] moved to [[Sr]]: uppercase <sr#174296>

--- a/wiki/Sr.wikitext
+++ b/wiki/Sr.wikitext
@@ -1,22 +1,1 @@
-==Translingual==
-===Symbol===
-'''Sr'''
-#{{chemistry}} symbol for [[strontium]]
-[[Category:Symbols]]
-
-----
-==English==
-==={{Abbreviation}}===
-'''Sr.''' ''or'' '''Sr''' (''British'')
-# [[Senior|senior]]; A title used after a [[father]]'s name when his [[son]] is given the same name.
-#:''John Doe Sr.''
-
-====See also====
-*[[Dr]]
-*[[Jr]]
-*[[Mr]]
-*[[Ms]]
-
-[[fr:sr]]
-[[ja:Sr]]
-[[pl:Sr]]
+#redirect [[Sr]]
