--- a/wiki/occur.wikitext
+++ b/wiki/occur.wikitext
@@ -1,7 +1,7 @@
-=={{en}}==
+=={{sbst:en}}==
 
 ===Etymology===
-Latin ''occurrere'', occursum; ob (see Ob-) + currere to run. See [[course]].
+Originally "meet, meet in argument", from {{MF.}} ''occurrer'', from {{L.}} ''occurrere'' "un to meet, run against, befall, present itself", ([[ob]]-) + ''currere''.
 
 ===Verb===
 '''occur''' ([[occurred]], [[occurring]])
@@ -9,5 +9,9 @@ Latin ''occurrere'', occursum; ob (see Ob-) + currere to run. See [[course]].
 #:''I will write if opportunity '''occurs'''.''
 #To meet or come to the mind; to suggest itself; to be presented to the imagination or memory.
 #:''There doth not '''occur''' to me any use of this experiment for profit.'' - Bacon.
+
+===Translations===
+French: arriver, se produire (1), venir à l'idée (de qqun) (2)
+German: vorkommen (1)
 
 [[ru:Occur]]
