--- a/wiki/treff.wikitext
+++ b/wiki/treff.wikitext
@@ -1,10 +1,15 @@
-==Hungarian==
+==German==
 ===Noun===
-'''treff'''
-# [[club]] (a [[playing card]] marked with the symbol ♣)
+'''Treff'''
 
-[[Category:Hungarian nouns]]
+#[[clubs]]
+#[[meeting point]]
 
+====related words====
+*[[Treffpunkt]] [[point de rencontre]]
 
-=== See also===
-*[[Treff]]
+====Translations====
+*{{fr}}: [[rencontre]] ? ''f''
+
+===See also===
+*[[treff]]
