--- a/wiki/sv.wikitext
+++ b/wiki/sv.wikitext
@@ -1,1 +1,10 @@
-#redirect [[sv]]
+==Translingual==
+===Symbol===
+'''Sv'''
+#(''metrology'') The symbol for '''[[sievert]]''', a [[unit]] of [[dose equivalent]].
+
+==See also==
+*[[sv]]
+*[[International System of Units]]
+
+[[Category:Symbols]]
