--- a/wiki/occur.wikitext
+++ b/wiki/occur.wikitext
@@ -1,4 +1,4 @@
-=={{sbst:en}}==
+==English==
 
 ===Etymology===
 Originally "meet, meet in argument", from {{MF.}} ''occurrer'', from {{L.}} ''occurrere'' "un to meet, run against, befall, present itself", ([[ob]]-) + ''currere''.
