--- a/wiki/AGC.wikitext
+++ b/wiki/AGC.wikitext
@@ -1,3 +1,4 @@
-==[[Wiktionary:List of acronyms and abbreviations|Abbreviation]]==
-
-Automatic Gain Control. (radio technics)
+== English ==
+=== Initialism ===
+'''AGC'''
+#(''radio technics'') ''Automatic Gain Control''
