--- a/wiki/AIF.wikitext
+++ b/wiki/AIF.wikitext
@@ -1,2 +1,4 @@
+==English==
 ==Abbreviation==
-#[[Audio Interchange File Format]]
+'''AIF'''
+#''[[w:Audio Interchange File Format|Audio Interchange File Format]]''
