--- a/wiki/navicular_bone.wikitext
+++ b/wiki/navicular_bone.wikitext
@@ -4,6 +4,9 @@
 '''navicular bone'''
 # (anatomy) One of the [[tarsal bone]]s of the [[foot]] or one of the [[carpal bone]]s of the [[wrist]].
 
+====Synonyms====
+* [[scaphoid]]
+
 ====See also====
 *[[bone]]
 
