[[siria]] moved to [[Siria]]: uppercase <siria#174301>

--- a/wiki/Siria.wikitext
+++ b/wiki/Siria.wikitext
@@ -1,9 +1,1 @@
-==Italian==
-===Proper noun===
-'''Siria''' ''f''
-
-# [[Syria]]
-
-===Related terms===
-*[[siriaco]]
-*[[siriano]]
+#redirect [[Siria]]
