Add synonyms <navicular#174299>

--- a/wiki/navicular.wikitext
+++ b/wiki/navicular.wikitext
@@ -3,6 +3,12 @@
 '''navicular'''
 # Shaped like a boat.
 
+====Synonym====
+* [[scaphoid]]
+
 ===Noun===
 '''navicular'''
 # (anatomy) A [[navicular bone]].
+
+====Synonym====
+* [[scaphoid]]
