--- a/wiki/NB.wikitext
+++ b/wiki/NB.wikitext
@@ -1,4 +1,7 @@
-'''Nb'''<br>{{chemistry}} symbol for [[niobium]]
+==Translingual==
+===Symbol===
+'''Nb'''
+#{{chemistry}} symbol for [[niobium]]
 [[Category:Symbols]]
 
 [[fr:Nb]]
