[[nb]] moved to [[Nb]]: uppercase <nb#174304>

--- a/wiki/NB.wikitext
+++ b/wiki/NB.wikitext
@@ -1,9 +1,1 @@
-==Translingual==
-===Symbol===
-'''Nb'''
-#{{chemistry}} symbol for [[niobium]]
-[[Category:Symbols]]
-
-[[fr:Nb]]
-[[ja:Nb]]
-[[pl:Nb]]
+#redirect [[Nb]]
