--- a/wiki/Svizzera.wikitext
+++ b/wiki/Svizzera.wikitext
@@ -1,14 +1,1 @@
-==Italian==
-===Proper noun===
-'''Svizzera''' ''f''
-
-# [[Switzerland]]
-
-===Related terms===
-*[[svizzero]]
-
-===See also===
-*[[Elvezia]]
-[[Category:It:Countries]]
-
-[[ja:Svizzera]]
+#redirect [[Svizzera]]
