--- a/wiki/ANSI.wikitext
+++ b/wiki/ANSI.wikitext
@@ -1,3 +1,4 @@
-==[[Wiktionary:List of acronyms and abbreviations|Abbreviation]]==
-
-American National Standards Institute. (earlier American Standards Association [[ASA]])
+==English==
+===Abbreviation===
+'''ANSI'''
+#abbreviation of ''[[w:American National Standards Institute|American National Standards Institute]]''
