--- a/wiki/MN.wikitext
+++ b/wiki/MN.wikitext
@@ -1,1 +1,8 @@
-#redirect [[MN]]
+==Translingual==
+===Symbol===
+'''mN'''
+#(''metrology'') The symbol for '''[[millinewton]]''', a [[unit]] of [[force]].
+
+----
+
+[[Category:Symbols]]
