--- a/wiki/MO.wikitext
+++ b/wiki/MO.wikitext
@@ -1,10 +1,1 @@
-==Translingual==
-===Symbol===
-'''Mo'''
-#{{chemistry}} symbol for [[molybdenum]]
-[[Category:Symbols]]
-
-[[fr:Mo]]
-[[it:mo]]
-[[ja:Mo]]
-[[pl:Mo]]
+#redirect [[Mo]]
