--- a/wiki/AOT.wikitext
+++ b/wiki/AOT.wikitext
@@ -1,3 +1,7 @@
-'''Ahead Of Time''', in general, any process that produces a result before it is needed.
+==English==
+===Initialism===
+'''AOT'''
+#abbreviation for ''Ahead Of Time''; in general, any process that produces a result before it is needed
 
-The term was created in contrast to [[JIT]].
+===Related terms===
+*[[JIT]]
