--- a/wiki/museum.wikitext
+++ b/wiki/museum.wikitext
@@ -1,1 +1,27 @@
-#redirect [[museum]]
+==German==
+===Noun===
+{| align=right border=1
+! [[Glossar:case|case]]
+! [[Glossar:singular|singular]]
+! [[Glossar:plural|plural]]
+|-
+|'''[[Glossar:nominative|nominative]]'''
+| Museum || Museen
+|-
+|'''[[Glossar:genitive|genitive]]'''
+| Museums || Museen
+|-
+|'''[[Glossar:dative|dative]]'''
+| Museum || Museen
+|-
+|'''[[Glossar:accusative|accusative]]'''
+| Museum || Museen
+|}
+
+'''Museum''' ''n''
+
+# [[museum]]
+# [[art gallery]]
+
+===See also===
+*[[museum]]
