--- a/wiki/museum.wikitext
+++ b/wiki/museum.wikitext
@@ -1,27 +1,64 @@
-==German==
+==English==
+===Etymology===
+Greek ''Mouseion'' shrine of the [[Muse]]s
 ===Noun===
-{| align=right border=1
-! [[Glossar:case|case]]
-! [[Glossar:singular|singular]]
-! [[Glossar:plural|plural]]
+{{wikipedia}}
+'''museum''' (''[[plural]]'' museums)
+#A [[building]] or [[institution]] [[dedicate]]d to the [[acquisition]], [[conservation]], [[study]], [[exhibition]], and [[educational]] [[interpretation]] of [[objects]] having [[scientific]], [[historical]], [[cultural]] or [[artistic]] value.
+
+====Translations====
+{| border=0 width=100%
 |-
-|'''[[Glossar:nominative|nominative]]'''
-| Museum || Museen
-|-
-|'''[[Glossar:genitive|genitive]]'''
-| Museums || Museen
-|-
-|'''[[Glossar:dative|dative]]'''
-| Museum || Museen
-|-
-|'''[[Glossar:accusative|accusative]]'''
-| Museum || Museen
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+*Finnish: [[museo]]
+*German: [[Museum]] ''n''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
+*{{no}}: [[:no:museum|museum]]
+*Swedish: [[museum#Swedish|museum]] ''n''
+|}
 |}
 
-'''Museum''' ''n''
+----
 
-# [[museum]]
-# [[art gallery]]
+==Swedish==
+===Noun===
+'''museum'''
 
-===See also===
-*[[museum]]
+#[[museum#English|museum]]
+
+{| border=1 cellspacing=0
+| bgcolor="#FFFFF0" colspan=5 align=center | '''Neuter'''
+|-
+|- bgcolor="#FFFFF0" align=center
+! rowspan=2 | 
+| colspan=2 width=105| Singular 
+| colspan=2 | Plural
+|- bgcolor="#FFFFF0" align=center
+| width=105 | ''Indefinite'' 
+| width=105 | ''Definite'' 
+| width=105 |  ''Indefinite'' 
+|  width=105 | ''Definite''
+|- align=center
+| width=105 bgcolor="#FFFFF0" | ''Nominative'' 
+| [[museum]]
+| [[museet]]
+| [[museer]]
+| [[museerna]]
+|- align=center
+| width=105 bgcolor="#FFFFF0" | ''Genitive'' 
+| [[museums]]
+| [[museets]]
+| [[museers]]
+| [[museernas]]
+|}
+
+[[de:museum]]
+[[it:museum]]
+[[hu:museum]]
+[[nl:museum]]
