--- a/wiki/APL.wikitext
+++ b/wiki/APL.wikitext
@@ -1,3 +1,4 @@
-==[[Wiktionary:List of acronyms and abbreviations|Abbreviation]]==
-
-A [[Programming Language]]
+==English==
+===Noun===
+'''APL'''
+#the name of a [[programming language]]
