--- a/wiki/ARNK.wikitext
+++ b/wiki/ARNK.wikitext
@@ -1,10 +1,7 @@
 ==English==
-===Noun===
-
-#[[airline]] and travel industry abbreviation for an [[unknown]] [[sector]] of an [[itinerary]].
-
-===Pronunciation===
-A.runk, an [[acronym]] of its full title, '''Arr'''ival '''Unk'''nown.
-
 ===Etymology===
 From the four letter computer [[code]] that shows on the [[reservation]] in place of a flight segment.
+
+===Noun===
+'''ARNK'''
+#[[airline]] and travel industry abbreviation for an [[unknown]] [[sector]] of an [[itinerary]].
