--- a/wiki/Tc.wikitext
+++ b/wiki/Tc.wikitext
@@ -1,11 +1,17 @@
+==Translingual==
+===Symbol===
 '''Tc'''
 #{{chemistry}} symbol for [[technetium]]
-
+[[Category:Symbols]]
+===See also===
+*[[TC]]
+----
+==English==
+==={{initialism}}===
 '''TC'''
 #Topic Closed.  Used in [[Internet forum]]s to announce that a topic thread is locked, indicating that no further replies are allowed in that topic thread.
-
-[[Category:Symbols]]
-
+===See also===
+*[[Tc]]
 [[fr:Tc]]
 [[ja:Tc]]
 [[pl:Tc]]
