[[ruotsi]] moved to [[Ruotsi]]: uppercase <ruotsi#174312>

--- a/wiki/Ruotsi.wikitext
+++ b/wiki/Ruotsi.wikitext
@@ -1,19 +1,1 @@
-==Finnish==
-
-===Proper noun===
-'''Ruotsi'''
-
-# [[Sweden]].
-
-====Related Words====
-*[[ruotsalainen]]
-
-===Noun===
-'''ruotsi'''
-
-# [[Swedish]] (''language'').
-
-====Synonyms====
-*[[ruotsin kieli]]
-
-[[Category:fi:Countries]]
+#redirect [[Ruotsi]]
