[[bann]] moved to [[Bann]] <bann#174313>

--- a/wiki/Bann.wikitext
+++ b/wiki/Bann.wikitext
@@ -1,10 +1,1 @@
-==German==
-===Noun===
-'''Bann''' ''m''
-# [[jurisdiction]].
-# [[ban]], [[proscription]].
-# [[excommunication]].
-# a regiment of [[Hitler Youth]]. (''plural'' [[Banne]])
-
-====Related words====
-* [[Bannbrief]], [[Bannbulle]], [[bannen]], [[Bannkreis]], etc
+#redirect [[Bann]]
