--- a/wiki/Tc.wikitext
+++ b/wiki/Tc.wikitext
@@ -1,1 +1,10 @@
-#redirect [[Tc]]
+==Translingual==
+===Symbol===
+'''Tc'''
+#{{chemistry}} symbol for [[technetium]]
+[[Category:Symbols]]
+===See also===
+*[[TC]]
+[[fr:Tc]]
+[[ja:Tc]]
+[[pl:Tc]]
