--- a/wiki/weed.wikitext
+++ b/wiki/weed.wikitext
@@ -1,4 +1,8 @@
 ==English==
+===Etymology===
+n. {{OE.}} ''weod'' "grass, herb, weed," from Proto-Germanic ''*weud-''
+v. {{OE.}} ''weodian'', from ''weod''
+
 ===Noun===
 '''weed''' (''[[countable]] and [[uncountable]]''; ''plural'' '''weeds''')
 
@@ -17,6 +21,7 @@
 
 ====Translations====
 *[[Polish]]: [[zioło]] ''n'' (11)
+*French: mauvaise herbe ''f'' (5), [[herbe]] ''f'', foin ''m'' {{uncountable}} (9,11) 
 
 ===Verb===
 '''to weed'''
